tests/fail/open_with_multiple_refs_as_single_threaded.stderr
error[E0432]: unresolved import `rocksdb`
 --> tests/fail/open_with_multiple_refs_as_single_threaded.rs:1:5
  |
1 | use rocksdb::{SingleThreaded, DBWithThreadMode, Options};
  |     ^^^^^^^ use of undeclared crate or module `rocksdb`
